URL Downloader complete, Unit-tested. Parser incomplete.

--- a/tests/README
+++ b/tests/README
@@ -2,4 +2,6 @@ Headlyne
 
 An RSS Feed 'Viewer'.
 
-tests		: Unit tests for all the nodes.
+tests: Unit tests for all the nodes.
+
+urllib.js: Unit-tests for the functions in /lib/urllib.js
